***********************************
CHANGES IN VERSION 2.10.0

NEW FEATURES

   o New utility - hicpro2higlass.sh to convert HiC-Pro output into higlass .cool files

   o HiC-Pro is now availabe as a Singularity container !

   o hicpro2juicebox.sh utility now supports alof HiC-Pro format (< 2.7.5)

SIGNIFICANT USER-VISIBLE CHANGES

   o udpate R scripts to be compatible with the lastest ggplot2 version (>2.2.1) and fix graphical bugs in quality controls

   o add new checks on input files and configuration files

   o Only provide HindIII annotation files for Mouse and Human as examples.

BUG FIXES

   o Remove the --user option during iced installation

   o R sessions are no longer saved and restored

   o hicpro2fithic - bug fix when no -o option specified 

   o Fix bug to avoid floating values in valid pair positions 

   o Fix bug in order of samtools sort parameter in bowtie_combine.sh

   o Fix bug in output option of makeViewpoints

   o fix bugs in plots of no trans interactions were detected

   o fix bug in split_reads.py when -o is specified

   o fix issue in hicpro2juicebox.sh. The first column was duplicated, and position are now 1-based

   o fix bug in ice_norm.sh when HiC-Pro is run with -s ice_norm option

***********************************
CHANGES IN VERSION 2.9.0

NEW FEATURES

   o update iced_0.4.2

SIGNIFICANT USER-VISIBLE CHANGES

   o Fix issues with floating values in hicpro2fithic.py (F. Ay)

   o Update hicpro2fithic.py script. New '-r' option to set up the data resolution (F. Ay)

   o samtools >1.0 is now required

   o The -s build_contact_maps option now  directly creates matrix files from .allValidPairs file. It does not merge the .validPairs anymore. Please use -s merge_persample to merge .validPairs files and remove duplicates.

   o Update manual and correct errors

BUG FIXES

   o Fix bug for SLURM support
   
   o Fix python path in merge_valid_interaction.sh

   o Fix bug in hicpro2juicebox when chromosome names have "_"
